Updating project after 9 years