@@ -1,28 +1,20 @@
-/*
- * To change this template, choose Tools | Templates
- * and open the template in the editor.
- */
 package br.com.trtgames.basico;
 
 import br.com.trtgames.model.Cliente;
 import br.com.trtgames.model.Conta;
 import br.com.trtgames.model.GuardadorDeObjetos;
 
-/**
- *
- * @author nenodias
- */
 public class TestaConta {
-    public static void main(String[] args){
+    public static void main(String[] args) {
         //Testando sobrescrita do método equals
         GuardadorDeObjetos go = new GuardadorDeObjetos();
-        Cliente cliente = new Cliente("Neno",new Long(2));
-        Conta conta = new Conta(new Long(1),cliente,new Double(100));
-        Conta conta2 = new Conta(new Long(1),new Cliente("Nino",new Long(3)),new Double(1000));
+        Cliente cliente = new Cliente("Neno", Long.valueOf(2));
+        Conta conta = new Conta(Long.valueOf(1), cliente, Double.valueOf(100));
+        Conta conta2 = new Conta(Long.valueOf(1), new Cliente("Nino", Long.valueOf(3)), new Double(1000));
 //        System.out.println(conta.equals(conta2));
         go.adicionaObjeto(conta);
         go.adicionaObjeto(conta2);
-        Conta c = (Conta)go.pegaObjeto(0);
+        Conta c = (Conta) go.pegaObjeto(0);
 //        System.out.println(c);//Pegando o Objeto
 //        charLinhaALinha("Socorram-me, subi no ônibus em Marrocos");
 //        System.out.println(charFrase("Socorram-me, subi no ônibus em Marrocos"));
@@ -32,18 +24,20 @@ public class TestaConta {
 //        s.reverse();
 //        System.out.println(s);
     }
-    public static void charLinhaALinha(String s){
-        for (int i=s.length()-1;i>-1;i--){
+
+    public static void charLinhaALinha(String s) {
+        for (int i = s.length() - 1; i > -1; i--) {
             System.out.println(s.charAt(i));
         }
     }
-    public static String charFrase(String s){
+
+    public static String charFrase(String s) {
         String[] result = s.split(" ");
-        String x="";
-        for(int i = result.length-1;i>-1;i--){
-            x +=" "+result[i];
+        String x = "";
+        for (int i = result.length - 1; i > -1; i--) {
+            x += " " + result[i];
         }
         return x;
-        
+
     }
 }
